...
<!-- SWAPPER -->
<!-- Login Page -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="comp3350.srsys.presentation.LoginPageUI">

...
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#D66440"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/loginForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />


...
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailTextField"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Email"
                android:inputType="textEmailAddress" />

...
            android:layout_centerHorizontal="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTextInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Sign In"
            app:backgroundTint="@color/primary_color" />

...
