...
<!-- SWAPPER -->
<!-- 1. SPLASH SCREEN -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:keepScreenOn="false"
    tools:context="comp3350.srsys.presentation.MainActivity">

...
        android:textColor="#E1714E"
        android:textSize="28sp"
        app:texts="@array/appStart"
        app:timeout="1000" />
    <!-- Lets Go Button -->
    <Button
        android:id="@+id/letsGoButton"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_below="@+id/fadingText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
...
