<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home_icon"
            android:title="Home" />
        <item
            android:id="@+id/accIcon"
            android:icon="@drawable/acc_icon"
            android:title="Account" />

        <item
            android:id="@+id/add"
            android:icon="@drawable/add"
            android:title="Add" />




    </group>



</menu>